<resources>
    <string name="language"><u>Language</u></string>
    <string name="ForgotPassword"><u>Forgot password?</u></string>
    <string name="CreateAccount"><u>Create an account.</u></string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="ignore"><u>Ignore</u></string>
    <string name="app_name">Devoir4</string>
    <string name="accueil">Accueil</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="history">History</string>
    <string name="plus">Plus</string>


</resources>