<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5ECEC"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profil"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="200dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ic_baseline_person_outline_24"
            android:clickable="true"
            android:focusable="true"
            android:text=""
            android:visibility="visible"
            app:backgroundTint="#090909"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="66dp"
            app:iconTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="229dp"
                android:layout_height="76dp"
                android:layout_margin="4dp"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_weight="1"
                android:background="@drawable/oval"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:paddingRight="16dp"
                android:src="@drawable/logo" />
        </FrameLayout>



        <TextView
            android:id="@+id/language"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="cursive"
            android:text="@string/language"
            android:textSize="20sp"
            android:textStyle="italic|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="77dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/barre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/audioBook"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="35dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="cursive"
            android:text="AudioBook"
            android:textSize="50sp"
            android:textStyle="italic|bold"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/iconAudio"
            android:layout_width="44dp"
            android:layout_height="45dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:background=""
            android:clickable="true"
            app:backgroundTint="#090909"
            app:icon="@drawable/earphone"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="46dp"
            app:iconTintMode="multiply" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/barre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeLayout">

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/search" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInput"
            android:layout_width="305dp"
            android:layout_height="match_parent"
            android:background="#D5ECEC"
            app:endIconTint="#FFFFFF"
            app:hintTextColor="#0B0B0B">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputText"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:hint="Search an audiobook" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titleYourAudio"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="233dp"
                android:layout_marginRight="233dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/graduate"
                android:text="Your audiobooks"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/barre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="125dp"
                android:layout_height="173dp"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginBottom="176dp"
                android:adjustViewBounds="false"
                android:background="#D5ECEC"
                android:cropToPadding="false"
                android:foreground="@drawable/harryPotter"
                android:foregroundGravity="fill_horizontal|fill_vertical"
                android:scaleType="fitCenter"
                android:tint="#D5ECEC"
                app:layout_constraintBottom_toTopOf="@+id/barre"
                app:layout_constraintEnd_toStartOf="@+id/imageButton3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleSuggestion"
                app:srcCompat="@drawable/harryPotter"
                tools:srcCompat="@drawable/harryPotter" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/barre"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginBottom="0dp"
        android:background="#12CDD4"
        android:backgroundTint="#12CDD4"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/home"
                android:layout_width="53dp"
                android:layout_height="43dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:clickable="true"
                android:color="#00F6F5F5"
                android:focusable="true"
                android:text=""
                app:background="@drawable/ic_baseline_home_24"
                app:backgroundTint="#12CDD4"
                app:icon="@drawable/ic_baseline_home_24"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="55dp"
                app:iconTint="#070707"
                app:iconTintMode="multiply" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:text="@string/accueil"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="82dp"
            android:layout_height="69dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/research"
                android:layout_width="53dp"
                android:layout_height="43dp"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/search"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:visibility="visible"
                app:backgroundTint="#090909"
                app:icon="@drawable/search"
                app:iconGravity="textEnd|start"
                app:iconPadding="0dp"
                app:iconSize="45dp"
                app:iconTint="#020202"
                app:iconTintMode="multiply" />

            <TextView
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:text="@string/search"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/discoverLayout"
            android:layout_width="82dp"
            android:layout_height="69dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/discover"
                android:layout_width="55dp"
                android:layout_height="43dp"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:clickable="true"
                android:color="#00F6F5F5"
                android:focusable="true"
                android:text=""
                android:visibility="visible"
                app:backgroundTint="#12CDD4"
                app:icon="@drawable/icon_eyeglasse"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="55dp"
                app:iconTintMode="multiply" />

            <TextView
                android:id="@+id/discoverText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:text="@string/discover"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/historyLayout"
            android:layout_width="82dp"
            android:layout_height="69dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/history"
                android:layout_width="55dp"
                android:layout_height="43dp"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:clickable="true"
                android:color="#00F6F5F5"
                android:focusable="true"
                android:text=""
                android:visibility="visible"
                app:backgroundTint="#12CDD4"
                app:icon="@drawable/icon_clock"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="45dp"
                app:iconTintMode="multiply" />

            <TextView
                android:id="@+id/historyText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:text="@string/history"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/plusLayout"
            android:layout_width="82dp"
            android:layout_height="69dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/plus"
                android:layout_width="55dp"
                android:layout_height="43dp"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:clickable="true"
                android:color="#00F6F5F5"
                android:focusable="true"
                android:text=""
                android:visibility="visible"
                app:backgroundTint="#12CDD4"
                app:icon="@drawable/icon_plus"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="45dp"
                app:iconTint="@color/black"
                app:iconTintMode="multiply" />

            <TextView
                android:id="@+id/plusText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:text="@string/plus"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>